# CrossPatch

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: keyless-judge.yml
artifacts/verification/: README.md  adversarial-evaluation.json  backend-tests.json  build-context-secret-scan.json  claim-provenance.json  codex-collaboration.json  compose-policy.json  demo-readiness.json  export-public-key.json  frontend-tests.json  github-license.json  hosted-acceptance.json  image-provenance.json  immutable-build.json  package-build.json  race-reproduction.json  real-model-runs.jsonl  release-summary.json  sbom.cdx.json  source-integrity.json  strict-compose-cleanup.json  warrant-boundary.json  (+2 more)
docs/: CLAIM_MAP.json  CODEX_COLLABORATION.md  DEPLOYMENT.md  DOCTRINE.json  EXTENDING.md  JUDGE_GUIDE.md  OPENAI_PLATFORM.md  THREAT_MODEL.md  codex-sessions.json
evals/: adversarial-corpus-v1.json  adversarial-sanitizer-vectors-v1.json
infra/: Caddyfile  Caddyfile.replay  entrypoint.sh  replay-entrypoint.sh  runner-policy.json  victim-worker.py
scripts/: backup.sh  backup_restore.py  build_immutable_images.py  capture_c2_runtime_provenance.py  capture_image_provenance.py  demo_readiness.py  derive_release_identity.py  evaluate-demo-readiness.sh  generate-claim-map.sh  generate_claim_map.py  generate_export_public_key.py  generate_sbom.py  github_license_verifier.py  hosted_verifier.py  publish_export_public_keys.py  release_verifier.py  reproducible_adversarial_eval.py  restore.sh  scan_build_context.py  setup-sample-incident.sh  setup_sample_incident.py  verification_lib.py  verify-github-license.sh  verify-hosted.sh  verify-release.sh  verify_capture_integrity.py  verify_claim_map.py  verify_codex_collaboration.py  verify_package_install.py  verify_public_repository.py  verify_replay.py
web/: eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
(+382 files in other folders)
